# scanner-soundboard

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  config-example.toml
src/: audio.rs  cli.rs  config.rs  main.rs
